#      for most of the possible nodes (cisco, windows, linux, ...)
#    - feature: option "cisco" for specific cisco info requests and printing
#    - bugfix: fixed some options no properly interpreted
#    - bugfix: now checking the IP info <-> interface mapping  
#    - feature: 2 new output cases, reflecting the leak of data for 
#      calculation. For initial run and for no valid historical dataset
#    - feature: operstatus in pnp4nagios port templates, for easier  
#      interface status tracking.
#    - enhancement: normal plugin output includes now load thresholds
#    - feature: --grapher and --grapherurl options to specify which grapher
#      solution is used. And alternative url can be specified. 
#    - feature: --short or --long options for less or more detailed plugin 
#      outputs. Using --long allow to clearly identify problematic interfaces
#      directly in the output of the plugin
#   ----------------------------------------------------------------------
#
#
# ========================================================================
# 	TODO list:
# 	 - option to enable change tracking for interfaces going from down to up
# 	 - add GetSnmpWalkxxxxx -> use of get_table and evaluate performances
# 	   against the use of unix snmpwalk
# 	 - review the nagios plugin development guidelines to see if it fits now
#       * use strict
#    - rewrite the way the fields in the info table are selected for more 
#      flexibility
#    - snmp v2c / v3 support
#    - extend the debug with new debug levels. Might be in the model of 
#      an addition of 0/1/2/4/8/16/32/64 to really select what is needed...
#    - info table (first table) building way review for more flexibility
#    - review general structure of the plugin
#    - see if the short (old) plugin output is really relevant or can be 
#      simply replaced by the long output
# ========================================================================